--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>first-lesson</artifactId>
-
+    <artifactId>client</artifactId>
     <dependencies>
 
     </dependencies>
@@ -19,4 +18,6 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+
 </project>
