--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>first-lesson</module>
+        <module>server</module>
+        <module>client</module>
     </modules>
 
     <properties>
