--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,14 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>first-lesson</artifactId>
-
+    <artifactId>server</artifactId>
     <dependencies>
 
+        <dependency>
+            <groupId>ru.geekbrains.cloudstorage</groupId>
+            <artifactId>client</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
 </project>
