--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.56.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
